@@ -150,6 +150,13 @@ local_restore() {
                                 1)      # DIR
                                 [[ ! -d "$restoredir/$newpath" ]] && mkdir -p "$restoredir/$newpath" 
                                 chown $uid:$gid "$restoredir/$newpath" 2>/dev/null
+
+                                if [[ $UID -ne 0 && $bits -eq 0 ]]; then
+                                        # if we're not read we need this
+                                        # otherwise we can't access the dir
+                                        _echo2 "Chmod-ing to 700"
+                                        $bits="700"
+                                fi
                                 chmod $bits "$restoredir/$newpath"
                                 idir=$(($idir + 1))
                                 ;;
@@ -235,6 +242,13 @@ remote_restore() {
                                 fi
                                 [[ ! -d "$restoredir/$newpath" ]] && mkdir -p "$restoredir/$newpath"
                                 chown $uid:$gid "$restoredir/$newpath" 2>/dev/null
+
+                                if [[ $UID -ne 0 && $bits -eq 0 ]]; then
+                                        # if we're not read we need this
+                                        # otherwise we can't access the dir
+                                        _echo2 "Chmod-ing to 700"
+                                        $bits="700"
+                                fi
                                 chmod $bits "$restoredir/$newpath"
                                 idir=$(( $idir + 1))
                                 ;;
